--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
-# Compiled class file
+# Eclipse/Java
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
 # Package Files #
 *.jar
@@ -19,5 +16,18 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Log file
+*.log
+
+
+
+# Xtend
+xtend-gen/
+*._trace
+*.xtendbin
+
+# Maven
+bundles/*/target/*
+features/*/target/*
+releng/*/target/*
+releng/*/workspace/*
