--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = joana
 	url = https://github.com/joana-team/joana
 	branch = component_based
+[submodule "edu.kit.kastel.sdq.PCMJoanaFlowAnalysis/src/edu/kit/joana/component/connector"]
+	path = edu.kit.kastel.sdq.PCMJoanaFlowAnalysis/src/edu/kit/joana/component/connector
+	url = https://github.com/reichef/JOANAConnector
