--- a/PrivacyCrashCamCaseStudy/pcc-imp-webinterface-prosecution/pom.xml
+++ b/PrivacyCrashCamCaseStudy/pcc-imp-webinterface-prosecution/pom.xml
@@ -20,6 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.test.skip>true</maven.test.skip>
         <!-- If there are no local customisations, this can also be "fetch" or "cdn" -->
         <vaadin.widgetset.mode>local</vaadin.widgetset.mode>
         <powermock.version>1.6.6</powermock.version>
