--- a/PrivacyCrashCamCaseStudy/pcc-imp-webservice/pom.xml
+++ b/PrivacyCrashCamCaseStudy/pcc-imp-webservice/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
         <slf4jVersion>1.6.1</slf4jVersion>
+        <maven.test.skip>true</maven.test.skip>
     </properties>
 
     <repositories>
@@ -211,29 +212,6 @@
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
                             </descriptorRefs>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-         <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.5.2</version>
-                <executions>
-                    <execution>
-                        <id>install-external</id>
-                        <phase>clean</phase>
-                        <configuration>
-                            <file>${basedir}/lib/joana.ui.annotations.jar</file>
-                            <repositoryLayout>default</repositoryLayout>
-                            <groupId>edu.kit.joana</groupId>
-                            <artifactId>annotations</artifactId>
-                            <version>1.0</version>
-                            <packaging>jar</packaging>
-                            <generatePom>true</generatePom>
-                        </configuration>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
