Revert "Changed Gitmodules again"
This reverts commit fb79b1502269e3a1899da6b4072517a672bb74fd.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+[submodule "joana"]
+	path = joana
+	url = https://github.com/joana-team/joana
+	branch = component_based
 [submodule "bundles/compositionofsecurityanalayses"]
 	path = bundles/compositionofsecurityanalayses
 	url = https://git.scc.kit.edu/dv9597/compositionofsecurityanalayses
