--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,9 @@
 	path = joana
 	url = https://github.com/joana-team/joana
 	branch = component_based
+[submodule "edu.kit.kastel.sdq.PCMJoanaFlowAnalysis/src/edu/kit/joana/component/connector"]
+	path = bundles/edu.kit.kastel.sdq.PCMJoanaFlowAnalysis/src/edu/kit/joana/component/connector
+	url = https://github.com/reichef/JOANAConnector
 [submodule "bundles/compositionofsecurityanalayses"]
 	path = bundles/compositionofsecurityanalayses
 	url = https://git.scc.kit.edu/dv9597/compositionofsecurityanalayses
