Update Project files and moved to new cosa namespace

--- a/edu.kit.kastel.sdq.PCMJoanaFlowAnalysis/plugin.xml
+++ b/edu.kit.kastel.sdq.PCMJoanaFlowAnalysis/plugin.xml
@@ -51,6 +51,10 @@
                                  property="org.eclipse.core.resources.name"
                                  value="*.ecoreannotations">
                            </test>
+                           <test
+                                 property="org.eclipse.core.resources.name"
+                                 value="*.json">
+                           </test>
                         </or>
                      </adapt>
                   </iterate>
