--- a/edu.kit.kastel.sdq.PCMJoanaFlowAnalysis/build.properties
+++ b/edu.kit.kastel.sdq.PCMJoanaFlowAnalysis/build.properties
@@ -2,5 +2,7 @@ source.. = src/,\
            libs/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               libs/json-io-4.12.0.jar
 jars.compile.order = .
+additional.bundles = 
