Fixed MinimalClientServerExample and added compiled JARs into each folder

--- a/CaseStudies/MinimalClientServerExample/Database/pom.xml
+++ b/CaseStudies/MinimalClientServerExample/Database/pom.xml
@@ -3,14 +3,15 @@
   <groupId>edu.kit.kastel.dsis.msflow.casestudy.simple</groupId>
   <artifactId>Database</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <build>
+ <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <release>8</release>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
