--- a/CaseStudies/MinimalClientServerExample/Server/pom.xml
+++ b/CaseStudies/MinimalClientServerExample/Server/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>edu.kit.kastel.dsis.msflow.casestudy.simple</groupId>
+  <groupId>edu.kit.kastel.dsis.msflow.casestudy.simple.Server</groupId>
   <artifactId>Server</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
@@ -10,7 +10,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <release>8</release>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
