Adjustments to support method parameters in the Sirius Diagram

--- a/edu.kit.kastel.sdq.PCMJoanaFlowAnalysisDiagramModel.edit/plugin.properties
+++ b/edu.kit.kastel.sdq.PCMJoanaFlowAnalysisDiagramModel.edit/plugin.properties
@@ -34,3 +34,8 @@ _UI_Flow_method_feature = Method
 _UI_Flow_id_feature = Id
 _UI_Unknown_feature = Unspecified
 
+_UI_Parameter_type = Parameter
+_UI_Method_parameter_feature = Parameter
+_UI_Flow_parameter_feature = Parameter
+_UI_Parameter_name_feature = Name
+_UI_Parameter_flow_feature = Flow
